force-app/main/default/objects/Data_Mapping__c/Data_Mapping__c.object-meta.xml
<CustomObject>
    <label>Data Mapping</label>
    <nameField>
        <displayFormat>DMR #{0}</displayFormat>
        <label>Data Mapping Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>