force-app/main/default/objects/Data_Mapping__c/fields/Data_Sync_Required__c.field-meta.xml
<CustomField>
    <fullName>Data_Sync_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Sync Required</label>
    <type>Checkbox</type>
</CustomField>