force-app/main/default/objects/Data_Mapping__c/fields/Document_Submission_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Document_Submission_Read_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Submission Read Only</label>
    <type>Checkbox</type>
</CustomField>