force-app/main/default/objects/Data_Mapping__c/fields/Document_Submission_Required__c.field-meta.xml
<CustomField>
    <fullName>Document_Submission_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Submission Required</label>
    <type>Checkbox</type>
</CustomField>