force-app/main/default/objects/Data_Mapping__c/fields/Document_Template__c.field-meta.xml
<CustomField>
    <fullName>Document_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Document Template</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Data Mapping</relationshipLabel>
    <relationshipName>Data_Mapping</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>