force-app/main/default/objects/Data_Mapping__c/fields/Is_Readonly__c.field-meta.xml
<CustomField>
    <fullName>Is_Readonly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Readonly</label>
    <type>Checkbox</type>
</CustomField>