force-app/main/default/objects/Data_Mapping__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active ?</label>
    <type>Checkbox</type>
</CustomField>