force-app/main/default/objects/Data_Mapping__c/fields/Template_Field__c.field-meta.xml
<CustomField>
    <fullName>Template_Field__c</fullName>
    <label>Template Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>